--- a/src/styles/settings/_zindex.scss
+++ b/src/styles/settings/_zindex.scss
@@ -4,7 +4,8 @@ $zindex-fixed: 1030 !default;
 $zindex-header-sub-navigation-backdrop: 1040 !default;
 $zindex-header-sub-navigation: 1050 !default;
 $zindex-header-main-navigation: 1060 !default;
-$zindex-modal-backdrop: 1070 !default;
-$zindex-modal: 1080 !default;
-$zindex-popover: 1090 !default;
-$zindex-tooltip: 1100 !default;
+$zindex-header-meta-navigation: 1070 !default;
+$zindex-modal-backdrop: 1080 !default;
+$zindex-modal: 1090 !default;
+$zindex-popover: 1100 !default;
+$zindex-tooltip: 1110 !default;
